textarea addet to new TODO

--- a/newtodo.html
+++ b/newtodo.html
@@ -42,11 +42,9 @@
         <h3>new TODO</h3>
 
         <p>TODO - DEMO</p>
-        <p>................</p>
-        <p>................</p>
-        <p>................</p>
-        <p>................</p>
-        <p>................</p>
+        <textarea rows="4" cols="70">
+        type in your TODO
+        </textarea>
         <p>................</p>
         <p>................</p>
 
