new Textarea and minor fixes

--- a/newtodo.html
+++ b/newtodo.html
@@ -42,9 +42,10 @@
         <h3>new TODO</h3>
 
         <p>TODO - DEMO</p>
-        <textarea rows="4" cols="70">
-        type in your TODO
-        </textarea>
+          <div class="form-group">
+          <label for="typeTODO">Type your new TODO</label>
+          <textarea class="form-control" rows="5" id="comment"></textarea>
+          </div>
         <p>................</p>
         <p>................</p>
 
