--- a/index.html
+++ b/index.html
@@ -39,11 +39,22 @@
 
         <div class="col-md-10"><!--Column right-->
 
-        <h3>Main TODO</h3>
+          <h3>Main TODO</h3>
 
-        <p>
-          TODO - DEMO
-        </p>
+          <p>
+            TODO - DEMO <br>
+            - CIT Project
+          </p>
+
+          <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="70"
+          aria-valuemin="0" aria-valuemax="100" style="width:65%">
+          <span class="sr-only">65% Complete</span>
+
+          <p> 65% </p>
+
+          </div>
+          </div>
 
         </div>
 
