--- a/impressum.html
+++ b/impressum.html
@@ -41,8 +41,16 @@
 
         <h3>Impressum</h3>
         <h5>Autoren:</h5>
-        <p>Arne Jasper Bernhardt</p>
-        <p>Nikias Manuel Praast</p>
+
+          <div class="col-md-5">
+            <p>Name: Bernhardt</p>
+            <p>Vorname: Arne Jasper </p>
+          </div>
+
+          <div class="col-md-5">
+            <p>Name: Praast</p>
+            <p>Vorname: Nikias Manuel </p>
+          </div>
 
         </div>
 
