--- a/index.html
+++ b/index.html
@@ -41,22 +41,115 @@
 
           <h3>Main TODO</h3>
 
-          <p>
-            TODO - DEMO <br>
-            - CIT Project
-          </p>
+          <div class="col-md-4">
+            <p>
+              TODO - DEMO <br>
+              - CIT Project
+            </p>
 
-          <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="70"
-          aria-valuemin="0" aria-valuemax="100" style="width:65%">
-          <span class="sr-only">65% Complete</span>
+            <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="70"
+            aria-valuemin="0" aria-valuemax="100" style="width:65%">
+            <span class="sr-only">65% Complete</span>
 
-          <p> 65% </p>
+            <p> 65% </p>
 
-          </div>
-          </div>
+            </div>
+            </div>
 
         </div>
+
+        <div class="col-md-4">
+            <p>
+              TODO - DEMO <br>
+              - CIT Project
+            </p>
+
+            <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="70"
+            aria-valuemin="0" aria-valuemax="100" style="width:15%">
+            <span class="sr-only">15% Complete</span>
+
+            <p> 15% </p>
+
+            </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-4">
+            <p>
+              TODO - DEMO <br>
+              - CIT Project
+            </p>
+
+            <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="70"
+            aria-valuemin="0" aria-valuemax="100" style="width:85%">
+            <span class="sr-only">85% Complete</span>
+
+            <p> 85% </p>
+
+            </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-4">
+            <p>
+              TODO - DEMO <br>
+              - CIT Project
+            </p>
+
+            <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="70"
+            aria-valuemin="0" aria-valuemax="100" style="width:0%">
+            <span class="sr-only">0% Complete</span>
+
+            <p> 0% </p>
+
+            </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-4">
+            <p>
+              TODO - DEMO <br>
+              - CIT Project
+            </p>
+
+            <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="70"
+            aria-valuemin="0" aria-valuemax="100" style="width:100%">
+            <span class="sr-only">100% Complete</span>
+
+            <p> 100% </p>
+
+            </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-4">
+            <p>
+              TODO - DEMO <br>
+              - CIT Project
+            </p>
+
+            <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="70"
+            aria-valuemin="0" aria-valuemax="100" style="width:50%">
+            <span class="sr-only">50% Complete</span>
+
+            <p> 50% </p>
+
+            </div>
+            </div>
+
+        </div>
+
+      </div>
 
       </div>
     </div>  
