--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
           <h3>Main TODO</h3>
 
           <div class="col-md-4">
+            <H5>TODO - DEMO </H5>
             <p>
-              TODO - DEMO <br>
-              - CIT Project
+              - CIT Project<br><br>
+              Deadline 01.01.2018
             </p>
 
             <div class="progress">
@@ -60,9 +61,10 @@
         </div>
 
         <div class="col-md-4">
+            <H5>TODO - DEMO </H5>
             <p>
-              TODO - DEMO <br>
-              - CIT Project
+              - CIT Project<br><br>
+              Deadline 01.01.2018
             </p>
 
             <div class="progress">
@@ -78,9 +80,10 @@
         </div>
 
         <div class="col-md-4">
+            <H5>TODO - DEMO </H5>
             <p>
-              TODO - DEMO <br>
-              - CIT Project
+              - CIT Project<br><br>
+              Deadline 01.01.2018
             </p>
 
             <div class="progress">
@@ -96,9 +99,10 @@
         </div>
 
         <div class="col-md-4">
+            <H5>TODO - DEMO </H5>
             <p>
-              TODO - DEMO <br>
-              - CIT Project
+              - CIT Project<br><br>
+              Deadline 01.01.2018
             </p>
 
             <div class="progress">
@@ -114,9 +118,10 @@
         </div>
 
         <div class="col-md-4">
+            <H5>TODO - DEMO </H5>
             <p>
-              TODO - DEMO <br>
-              - CIT Project
+              - CIT Project<br><br>
+              Deadline 01.01.2018
             </p>
 
             <div class="progress">
@@ -132,9 +137,10 @@
         </div>
 
         <div class="col-md-4">
+            <H5>TODO - DEMO </H5>
             <p>
-              TODO - DEMO <br>
-              - CIT Project
+              - CIT Project<br><br>
+              Deadline 01.01.2018
             </p>
 
             <div class="progress">
