--- a/edittodo.html
+++ b/edittodo.html
@@ -40,14 +40,119 @@
 
         <h3>edit TODO</h3>
 
-        <p>TODO - DEMO</p>
-        <p>................</p>
-        <p>................</p>
-        <p>................</p>
-        <p>................</p>
-        <p>................</p>
-        <p>................</p>
-        <p>................</p>
+          <div class="col-md-4">
+            <H5>TODO - DEMO </H5>
+            <p>
+              - CIT Project<br><br>
+              Deadline 01.01.2018
+            </p>
+
+            <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="70"
+            aria-valuemin="0" aria-valuemax="100" style="width:65%">
+            <span class="sr-only">65% Complete</span>
+
+            <p> 65% </p>
+
+            </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-4">
+            <H5>TODO - DEMO </H5>
+            <p>
+              - CIT Project<br><br>
+              Deadline 01.01.2018
+            </p>
+
+            <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="70"
+            aria-valuemin="0" aria-valuemax="100" style="width:15%">
+            <span class="sr-only">15% Complete</span>
+
+            <p> 15% </p>
+
+            </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-4">
+            <H5>TODO - DEMO </H5>
+            <p>
+              - CIT Project<br><br>
+              Deadline 01.01.2018
+            </p>
+
+            <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="70"
+            aria-valuemin="0" aria-valuemax="100" style="width:85%">
+            <span class="sr-only">85% Complete</span>
+
+            <p> 85% </p>
+
+            </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-4">
+            <H5>TODO - DEMO </H5>
+            <p>
+              - CIT Project<br><br>
+              Deadline 01.01.2018
+            </p>
+
+            <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="70"
+            aria-valuemin="0" aria-valuemax="100" style="width:0%">
+            <span class="sr-only">0% Complete</span>
+
+            <p> 0% </p>
+
+            </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-4">
+            <H5>TODO - DEMO </H5>
+            <p>
+              - CIT Project<br><br>
+              Deadline 01.01.2018
+            </p>
+
+            <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="70"
+            aria-valuemin="0" aria-valuemax="100" style="width:100%">
+            <span class="sr-only">100% Complete</span>
+
+            <p> 100% </p>
+
+            </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-4">
+            <H5>TODO - DEMO </H5>
+            <p>
+              - CIT Project<br><br>
+              Deadline 01.01.2018
+            </p>
+
+            <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="70"
+            aria-valuemin="0" aria-valuemax="100" style="width:50%">
+            <span class="sr-only">50% Complete</span>
+
+            <p> 50% </p>
+
+            </div>
+            </div>
+
+        </div>
 
         <div class="editbtn">
           <div class="col-md-3">
