--- a/index.html
+++ b/index.html
@@ -41,119 +41,43 @@
 
           <h3>Main TODO</h3>
 
-          <div class="col-md-4">
-            <H5>TODO - DEMO </H5>
-            <p>
-              - CIT Project<br><br>
-              Deadline 01.01.2018
-            </p>
-
-            <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="70"
-            aria-valuemin="0" aria-valuemax="100" style="width:65%">
-            <span class="sr-only">65% Complete</span>
-
-            <p> 65% </p>
-
-            </div>
-            </div>
-
-        </div>
-
-        <div class="col-md-4">
-            <H5>TODO - DEMO </H5>
-            <p>
-              - CIT Project<br><br>
-              Deadline 01.01.2018
-            </p>
-
-            <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="70"
-            aria-valuemin="0" aria-valuemax="100" style="width:15%">
-            <span class="sr-only">15% Complete</span>
-
-            <p> 15% </p>
-
-            </div>
-            </div>
-
-        </div>
-
-        <div class="col-md-4">
-            <H5>TODO - DEMO </H5>
-            <p>
-              - CIT Project<br><br>
-              Deadline 01.01.2018
-            </p>
-
-            <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="70"
-            aria-valuemin="0" aria-valuemax="100" style="width:85%">
-            <span class="sr-only">85% Complete</span>
-
-            <p> 85% </p>
-
-            </div>
-            </div>
-
-        </div>
-
-        <div class="col-md-4">
-            <H5>TODO - DEMO </H5>
-            <p>
-              - CIT Project<br><br>
-              Deadline 01.01.2018
-            </p>
-
-            <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="70"
-            aria-valuemin="0" aria-valuemax="100" style="width:0%">
-            <span class="sr-only">0% Complete</span>
-
-            <p> 0% </p>
-
-            </div>
-            </div>
-
-        </div>
-
-        <div class="col-md-4">
-            <H5>TODO - DEMO </H5>
-            <p>
-              - CIT Project<br><br>
-              Deadline 01.01.2018
-            </p>
-
-            <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="70"
-            aria-valuemin="0" aria-valuemax="100" style="width:100%">
-            <span class="sr-only">100% Complete</span>
-
-            <p> 100% </p>
-
-            </div>
-            </div>
-
-        </div>
-
-        <div class="col-md-4">
-            <H5>TODO - DEMO </H5>
-            <p>
-              - CIT Project<br><br>
-              Deadline 01.01.2018
-            </p>
-
-            <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="70"
-            aria-valuemin="0" aria-valuemax="100" style="width:50%">
-            <span class="sr-only">50% Complete</span>
-
-            <p> 50% </p>
-
-            </div>
-            </div>
-
-        </div>
+         <table class="todo-table">
+    <thead>
+      <tr>
+        <th>projectname</th>
+        <th>desription</th>
+        <th>deadline</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>CIT Project</td>
+        <td>soo much fun</td>
+        <td>Deadline 01.01.2018</td>
+      </tr>
+        <tr>
+        <td>CIT Project</td>
+        <td>soo much fun</td>
+        <td>Deadline 01.01.2018</td>
+      </tr>      <tr>
+        <td>CIT Project</td>
+        <td>soo much fun</td>
+        <td>Deadline 01.01.2018</td>
+      </tr>      <tr>
+        <td>CIT Project</td>
+        <td>soo much fun</td>
+        <td>Deadline 01.01.2018</td>
+      </tr>      <tr>
+        <td>CIT Project</td>
+        <td>soo much fun</td>
+        <td>Deadline 01.01.2018</td>
+      </tr>      <tr>
+        <td>CIT Project</td>
+        <td>soo much fun</td>
+        <td>Deadline 01.01.2018</td>
+      </tr>
+    </tbody>
+  </table>
 
       </div>
 
