--- a/index.html
+++ b/index.html
@@ -37,50 +37,119 @@
 
         </div>
 
-        <div class="col-md-10"><!--Column right-->
-
+        <div class="tablecontainer">
+        <div class="col-md-10">
           <h3>Main TODO</h3>
 
-         <table class="todo-table">
+         <table class="table table-striped">
     <thead>
       <tr>
-        <th>projectname</th>
-        <th>desription</th>
-        <th>deadline</th>
+        <th>Projectname</th>
+        <th>Desription</th>
+        <th>Progress</th>
+        <th>Deadline</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td>CIT Project</td>
         <td>soo much fun</td>
-        <td>Deadline 01.01.2018</td>
+        <td>
+
+            <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="65"
+            aria-valuemin="0" aria-valuemax="100" style="width:65%">
+            <span class="sr-only">65% Complete</span>
+
+            <p> 65% </p>
+
+            </div>
+            </div>
+        </td>
+        <td>01.01.2018</td>
       </tr>
         <tr>
         <td>CIT Project</td>
         <td>soo much fun</td>
-        <td>Deadline 01.01.2018</td>
-      </tr>      <tr>
+        <td>
+            <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="15"
+            aria-valuemin="0" aria-valuemax="100" style="width:15%">
+            <span class="sr-only">15% Complete</span>
+
+            <p> 15% </p>
+
+            </div>
+            </div>
+        </td>
+        <td>01.01.2018</td>
+      </tr>      
+      <tr>
         <td>CIT Project</td>
         <td>soo much fun</td>
-        <td>Deadline 01.01.2018</td>
-      </tr>      <tr>
+        <td>
+            <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="85"
+            aria-valuemin="0" aria-valuemax="100" style="width:85%">
+            <span class="sr-only">85% Complete</span>
+
+            <p> 85% </p>
+
+            </div>
+            </div>
+        </td>
+        <td>01.01.2018</td>
+      </tr>      
+      <tr>
         <td>CIT Project</td>
         <td>soo much fun</td>
-        <td>Deadline 01.01.2018</td>
-      </tr>      <tr>
+        <td>
+            <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="0"
+            aria-valuemin="0" aria-valuemax="100" style="width:0%">
+            <span class="sr-only">0% Complete</span>
+
+            <p> 0% </p>
+        </td>
+        <td>01.01.2018</td>
+      </tr>      
+      <tr>
         <td>CIT Project</td>
         <td>soo much fun</td>
-        <td>Deadline 01.01.2018</td>
-      </tr>      <tr>
+        <td>
+            <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="100"
+            aria-valuemin="0" aria-valuemax="100" style="width:100%">
+            <span class="sr-only">100% Complete</span>
+
+            <p> 100% </p>
+
+            </div>
+            </div>
+        </td>
+        <td>01.01.2018</td>
+      </tr>      
+      <tr>
         <td>CIT Project</td>
         <td>soo much fun</td>
-        <td>Deadline 01.01.2018</td>
+        <td>
+            <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="50"
+            aria-valuemin="0" aria-valuemax="100" style="width:50%">
+            <span class="sr-only">50% Complete</span>
+
+            <p> 50% </p>
+
+            </div>
+            </div>
+        </td>
+        <td>01.01.2018</td>
       </tr>
     </tbody>
   </table>
 
       </div>
-
+      </div>
       </div>
     </div>  
 
