--- a/edittodo.html
+++ b/edittodo.html
@@ -39,9 +39,9 @@
         <div class="col-md-10"><!--Column right-->
 
         <h3>edit TODO</h3>
-
+        <div class="todoex">
           <div class="col-md-4">
-          <a href="#"
+     
             <H5>TODO - DEMO </H5>
             <p>
               - CIT Project<br><br>
@@ -60,10 +60,10 @@
 
 
         </div>
-        </a>
+
 
         <div class="col-md-4">
-        <a href="#"
+  
             <H5>TODO - DEMO </H5>
             <p>
               - CIT Project<br><br>
@@ -81,10 +81,10 @@
             </div>
 
         </div>
-        </a>
+   
 
         <div class="col-md-4">
-        <a href="#"
+  
             <H5>TODO - DEMO </H5>
             <p>
               - CIT Project<br><br>
@@ -102,10 +102,10 @@
             </div>
 
         </div>
-        </a>
+
 
         <div class="col-md-4">
-        <a href="#"
+  
             <H5>TODO - DEMO </H5>
             <p>
               - CIT Project<br><br>
@@ -123,10 +123,12 @@
             </div>
 
         </div>
-        </a>
+
+
+        </div>
 
         <div class="col-md-4">
-        <a href="#"
+
             <H5>TODO - DEMO </H5>
             <p>
               - CIT Project<br><br>
@@ -144,10 +146,10 @@
             </div>
 
         </div>
-        </a>
+  
 
         <div class="col-md-4">
-        <a href="#"
+ 
             <H5>TODO - DEMO </H5>
             <p>
               - CIT Project<br><br>
@@ -165,7 +167,7 @@
             </div>
 
         </div>
-        </a>
+   
 
         <div class="editbtn">
           <div class="col-md-3">
