radiobuttons & text alighnment

--- a/edittodo.html
+++ b/edittodo.html
@@ -57,7 +57,10 @@
 
             </div>
             </div>
-
+            <div class="radio">
+              <label><input type="radio" name="optradio">TODO 1</label>
+            </div>
+            <p><br></p>
 
         </div>
 
@@ -79,6 +82,10 @@
 
             </div>
             </div>
+            <div class="radio">
+              <label><input type="radio" name="optradio">TODO 2</label>
+            </div>
+            <p><br></p>
 
         </div>
    
@@ -100,6 +107,10 @@
 
             </div>
             </div>
+            <div class="radio">
+              <label><input type="radio" name="optradio">TODO 3</label>
+            </div>
+            <p><br></p>
 
         </div>
 
@@ -121,6 +132,10 @@
 
             </div>
             </div>
+            <div class="radio">
+              <label><input type="radio" name="optradio">TODO 4</label>
+            </div>
+            <p><br></p>
 
         </div>
 
@@ -144,6 +159,10 @@
 
             </div>
             </div>
+            <div class="radio">
+              <label><input type="radio" name="optradio">TODO 5</label>
+            </div>
+            <p><br></p>
 
         </div>
   
@@ -165,6 +184,10 @@
 
             </div>
             </div>
+            <div class="radio">
+              <label><input type="radio" name="optradio">TODO 6</label>
+            </div>
+            <p><br></p>
 
         </div>
    
