mouseover glowing authors...

--- a/impressum.html
+++ b/impressum.html
@@ -40,17 +40,24 @@
         <div class="col-md-10"><!--Column right-->
 
         <h3>Impressum</h3>
-        <h5>Autoren:</h5>
+
+        <div class = author>
+        <a href="#">
+        <h4>Autoren:<span></span></h4>
 
           <div class="col-md-5">
-            <p>Name: Bernhardt</p>
-            <p>Vorname: Arne Jasper </p>
+            <h5>Name: Bernhardt</h5>
+            <h5>Vorname: Arne Jasper </h5>
           </div>
 
           <div class="col-md-5">
-            <p>Name: Praast</p>
-            <p>Vorname: Nikias Manuel </p>
+            <h5>Name: Praast</h5>
+            <h5>Vorname: Nikias Manuel </h5>
           </div>
+
+          </a>
+
+        </div>
 
         </div>
 
