--- a/impressum.html
+++ b/impressum.html
@@ -43,7 +43,7 @@
 
         <div class = author>
         <a href="#">
-        <h4>Autoren:<span></span></h4>
+        <h4>Autoren:</h4>
 
           <div class="col-md-5">
             <h5>Name: Bernhardt</h5>
